Bug 157445. Be more aggressive about making visibility:hidden elements have visible views. r+sr=bzbarsky